change some text in index.html page

--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
             <img src="http://placekitten.com/295/200" alt="kitten-three">
             <figcaption>Voluptas Laborum Unde</figcaption>
             <p>
-              Ducimus libero ab, neque quod laudantium at expedita eveniet asperiores fugit sequi cum facilis, dolores totam.
+              Ducimus libero ab, neque quod laudantium at expedita eveniet asperiores  neque quod laudantium at expedita fugit sequi cum facilis, dolores totam.
             </p>
           </figure>
         </span> 
